
* Moved utility functions out of setup.py and into util module.
* Moved setuptools imports (with fallback) to util module.
* Added DEPENDENCIES.
* Fixed a bug in application.director that crept in during the last merge.
* Added a build-checking script and added it to the commit script.
* Incremented the version number for next development cycle.
* Added more messages to the check-build script.

2008.07.06 oubiwann

* Fixed errors in README REST.

2008.07.05 oubiwann

* Updated setup.py with code from zc.twist's setup.py.
* Updated README.
* Updated setup.py with utility functions from Zope Corp.
* Updated README some more.
* Added a manifest template so that doc files get included in the sdists.
* Updated TODO.
* Updated the example lb API .tac file.
* Fixed some whitespace.
* Merged changes made in 1.1.0 release branch.
* Added support for more concise use of HostMapper by creating sensible
defaults for proxy and group names.
* Added a test for the concise form.
* Cleaned up the lb API by calling proxiesFactory in __init__.
* Updated TODO with notes that were in the scheduler module, but hadn't made it
into the TODO file.
* More TODO updates.

2008.07.04 oubiwann

* Added toXML() method to the admin config object.
* Broke the manager section down into several parts.
* Updated docs to account for changes to the group/enable stuff and the manager
section.
* Added toXML() method to the admin config object.
* Added a control section.
* Added toXML() method to the top-level config object.
* Removed all references to pdconfig (changed to just 'config').
* Added a stub for an "enable group" page.
* Removed old read only page code.
* Added checks for read-only status.
* Added capability of templates to display messages at the top of the page.
* Updated the admin pages so that messages actually get displayed in the
header.
* Fixed error when deleting a host in the web UI.
* Added a setup for the config checker in application.director.